--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,6 @@
 
 root = true
 
-
 [*]
 end_of_line = lf
 charset = utf-8
@@ -13,12 +12,12 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[*.{html,php,js}]
+[*.{html,php,js,clang-format}]
 indent_size = 2
 
-[*.txt]
-indent_style = tab
-indent_size = 4
+[CMakeLists.txt]
+indent_style = space
+indent_size = 2
 
 [Makefile]
 indent_style = tab
